--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -5,12 +5,14 @@
 
     <!-- Logo -->
     <a th:href="@{/index}" class="nav-link">
-      <img src="logo.png" alt="Hospital Logo" class="mb-4" />
+<!--      <img th:src="@{/images/logoakora.png}" alt="Sistema Akaroa Logo" class="mb-4" />-->
     </a>
 
     <!-- Header con título dinámico -->
     <header class="ml-2">
+      <h3>Nombre génerico 1</h3>
       <h3>Administrador</h3>
+      <hr>
     </header>
     <header>
       <h4>Productos</h4>
@@ -31,6 +33,7 @@
       </a>
 
       <header>
+        <hr>
         <h4>Ventas</h4>
       </header>
 
@@ -42,6 +45,7 @@
       </a>
 
       <header>
+        <hr>
         <h4>Usuarios</h4>
       </header>
 
