--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -18,6 +18,7 @@
 
         <div class="hola" style="margin-left: 275px">
             Hello world!
+            <img th:src="@{images/logoakaroa.png}" alt="">
         </div>
     </div>
 
