--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -1,3 +1,7 @@
+body{
+    font-family: sans-serif;
+    background: #201E43 !important;
+}
 .sidebar {
     height: 100vh;
     background-color: #f7f8fb;
@@ -50,3 +54,501 @@
     margin: 10px 0 30px 0;
 }
 
+/* Login css */
+
+.login-main{
+    display: flex;
+    width: 100%;
+    height: 100vh;
+    padding: 12% 35%;
+    font-family: sans-serif;
+    flex-direction: column;
+    align-items: flex-start;
+    //gap: 10px;
+    flex: 1 0 0;
+    align-self: stretch;
+    background: #201E43;
+}
+.login-main-container{
+    display: flex;
+    flex-direction: column;
+    font-family: sans-serif;
+    align-items: center;
+    gap: 60px;
+    background: #201E43;
+}
+.login-title-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+.login-main-container h1{
+    color: #FFF;
+    /* Title */
+    font-family: sans-serif;
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+.login-logo{
+    width: 56px;
+    height: 52px;
+}
+.login-form-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 8px;
+}
+.login-form-container h2{
+    color: #FEFDFD;
+    /* Subtitle */
+    font-family: sans-serif;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+.login-form-container form{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 8px;
+    align-self: stretch;
+}
+.login-form-button-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+    align-self: stretch;
+}
+.login-form-button-container a{
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 1;
+    overflow: hidden;
+    color: #FFF;
+    text-overflow: ellipsis;
+    /* Light Paragraph */
+    font-family: sans-serif;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: normal;
+    text-decoration-line: underline;
+    letter-spacing: 1px;
+}
+.login-form-button-container button{
+    display: flex;
+    padding: 8px 32px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    border-radius: 8px;
+    background: #FBFBFB;
+}
+.login-form-container form button{
+    display: flex;
+    padding: 8px 32px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    border-radius: 8px;
+    background: #FBFBFB;
+}
+.login-form-input-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+}
+.login-form-input-container input{
+    background: transparent;
+    display: flex;
+    width: 401px;
+    padding: 12px;
+    align-items: center;
+    gap: 10px;
+    border-radius: 8px;
+    border: 1px solid #FBFBFB;
+    opacity: 0.75;
+    color: #FFFFFF;
+    letter-spacing: 1px;
+}
+
+/* Gestionar Productos CSS */
+
+.main-productos-container{
+    width: 100%;
+    height: 1269px;
+    background: #201E43;
+}
+.product-form-container{
+    display: flex;
+    width: 1036px;
+    padding: 12px 0px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    background: #201E43;
+    gap: 20px;
+}
+.product-form-container h1{
+    align-self: stretch;
+    margin-top: 50px;
+    color: #FFF;
+    /* Subtitle */
+    font-family: sans-serif;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+.product-form-container h3{
+    color: #FFF;
+
+    /* Subtitle 2 */
+    font-family: sans-serif;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+.product-form-container form, .form-att{
+    display: flex;
+    align-items: flex-end;
+    align-content: flex-end;
+    gap: 12px;
+    align-self: stretch;
+    flex-wrap: wrap;
+}
+.product-form-container form button{
+    display: flex;
+    padding: 8px 32px;
+    justify-content: center;
+    align-items: center;
+    align-self: stretch;
+    border-radius: 8px;
+    background: #FBFBFB;
+}
+.product-input-container{
+    display: flex;
+    height: 66px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 4px;
+}
+.product-input-container label{
+    color: #FFF;
+    /* Subtitle 3 */
+    font-family: sans-serif;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+.product-input-container input, .product-input-container select{
+    display: flex;
+    padding: 12px;
+    align-items: center;
+    gap: 10px;
+    align-self: stretch;
+    border-radius: 8px;
+    border: 1px solid #FBFBFB;
+    opacity: 0.75;
+    color: #FBFBFB;
+    /* Paragraph */
+    font-family: sans-serif;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    background: transparent;
+}
+.product-input-container select option{
+    background: #FBFBFB;
+    color: #201E43;
+}
+.product-input-container2{
+    display: flex;
+    width: 1036px;
+    height: 66px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 4px;
+}
+.product-input-container2 label{
+    color: #FFF;
+    /* Subtitle 3 */
+    font-family: sans-serif;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+.product-input-container2 input{
+    display: flex;
+    padding: 12px;
+    align-items: center;
+    gap: 10px;
+    align-self: stretch;
+    color: #FBFBFB;
+    /* Paragraph */
+    font-family: sans-serif;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    background: transparent;
+    border-radius: 8px;
+    border: 1px solid #FBFBFB;
+    opacity: 0.75;
+}
+
+.product-searchProduct-container{
+    display: flex;
+    width: 1036px;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 16px;
+}
+.product-searchProduct-container h3{
+    color: #FFF;
+    /* Subtitle 2 */
+    font-family: sans-serif;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+.product-searcher-container{
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    align-self: stretch;
+}
+.product-searcher-container input{
+    display: flex;
+    width: 920px;
+    padding: 12px;
+    align-items: center;
+    gap: 10px;
+    border-radius: 8px;
+    border: 1px solid #FBFBFB;
+    background: transparent;
+    opacity: 0.75;
+    color: #FBFBFB;
+    /* Paragraph */
+    font-family: sans-serif;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+.product-searcher-container button{
+    display: flex;
+    padding: 8px 32px;
+    justify-content: center;
+    align-items: center;
+    flex: 1 0 0;
+    align-self: stretch;
+    border-radius: 8px;
+    background: #FBFBFB;
+    color: #201E43;
+    font-family: sans-serif;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+}
+.product-products-container{
+    display: flex;
+    padding: 40px;
+    justify-content: space-between;
+    align-items: flex-start;
+    align-content: flex-start;
+    row-gap: 32px;
+    align-self: stretch;
+    flex-wrap: wrap;
+    border-radius: 8px;
+    background: #FBFBFB;
+}
+.product-card-container{
+    display: flex;
+    width: 463px;
+    flex-direction: column;
+    height: 240px;
+    padding: 21px 22px;
+    align-items: flex-start;
+    gap: 8px;
+    border-radius: 8px;
+    background: linear-gradient(94deg, #DCDCDC 0%, #E4E4E4 100%);
+}
+.product-card-container2{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    gap: 8px;
+    align-self: stretch;
+}
+.product-card-information{
+    display: flex;
+    align-items: center;
+    gap: 24px;
+    align-self: stretch;
+}
+.product-text-info{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 8px;
+    flex: 1 0 0;
+    align-self: stretch;
+}
+.product-card-information div h4{
+    color: #000;
+    /* Subtitle 2 */
+    font-family: sans-serif;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+.product-card-information div p{
+    color: #000;
+    /* Light Paragraph 2 */
+    font-family: sans-serif;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: normal;
+}
+.product-card-information img{
+    width: 166px;
+    height: 166px;
+    border-radius: 8px;
+    background: #FBFBFB;
+}
+.product-card-actions, atributo-actions{
+    display: flex;
+    height: 24px;
+    justify-content: flex-end;
+    align-items: center;
+}
+.product-card-actions div{
+    width: 24px;
+    height: 24px;
+}
+
+/* Gestionar Atributos */
+.atributos-container{
+    display: flex;
+    width: 1036px;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 20px;
+}
+
+.atributos-container h1 {
+    align-self: stretch;
+    color: #FFF;
+    /* Subtitle */
+    font-family: sans-serif;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
+.atributos-selection-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    align-self: stretch;
+}
+.atributos-navbar-container{
+    display: flex;
+    align-items: center;
+    border-radius: 8px 8px 0 0;
+    background: #FBFBFB;
+}
+.atributos-navbar-container div{
+    display: flex;
+    padding: 12px 16px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    //border: 1px solid #FBFBFB;
+    //background: #FFF;
+    color: #201E43;
+    /* Paragraph */
+    font-family: sans-serif;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+.navbar-presentacion:hover, .navbar-unidadmedida:hover, .navbar-categoria:hover{
+    background: #201E43;
+    color: #FBFBFB;
+    cursor: pointer;
+    border: 1px solid #FBFBFB !important;
+    border-radius: 8px 8px 0 0;
+}
+
+.atributos-selection-main-content{
+    height: 550px;
+    padding: 40px;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 32px;
+    align-self: stretch;
+    border-radius: 0px 8px 8px 8px;
+    background: #FBFBFB;
+    display: none;
+}
+.showContent{
+    display: flex;
+}
+.selected-tab{
+    background: #201E43;
+    color: #FBFBFB !important;
+    border: 1px solid #FBFBFB !important;
+    border-radius: 8px 8px 0 0;
+}
+.atributo-input-container{
+    display: flex;
+    padding: 8px 16px;
+    justify-content: space-between;
+    align-items: center;
+    align-self: stretch;
+    border-radius: 8px;
+    background: linear-gradient(94deg, #DCDCDC 0%, #E4E4E4 100%);
+}
+.atributo-input-container p{
+    color: #696969;
+    /* Light Paragraph */
+    font-family: sans-serif;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: normal;
+}
+
+#button-att,#button-att2 {
+    display: flex;
+    padding: 8px 32px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    border-radius: 8px;
+    background: #FBFBFB;
+}
