--- a/src/main/resources/templates/atributos.html
+++ b/src/main/resources/templates/atributos.html
@@ -2,9 +2,145 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <link rel="stylesheet"  href="/css/styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <title>Gestionar atributos</title>
 </head>
 <body>
-    <h1>Atributos</h1>
+    <div th:replace="fragments/header :: headerFragment (title='Administrador')"></div>
+    <main class="main-productos-container" style="padding-left: 350px">
+        <div class="atributos-container">
+            <h1>Gestión Atributos</h1>
+            <div class="atributos-selection-container">
+                <div class="atributos-navbar-container">
+                    <div class="navbar-presentacion selected-tab" id="presentacion-tab">Presentación</div>
+                    <div class="navbar-unidadmedida" id="unidadmedida-tab">Unidad de Medida</div>
+                    <div class="navbar-categoria" id="categoria-tab">Categoría</div>
+                </div>
+                <div class="atributos-selection-main-content showContent" id="presentacion-att">
+                    <div class="atributo-input-container">
+                            <p>Presentacion 1</p>
+                            <div class="atributo-actions">
+                                <div class="product-action-edit"></div>
+                                <div class="product-action-delete"></div>
+                            </div>
+                        </div>
+                    <div class="atributo-input-container">
+                        <p>Presentacion 2</p>
+                        <div class="atributo-actions">
+                            <div class="product-action-edit"></div>
+                            <div class="product-action-delete"></div>
+                        </div>
+                    </div>
+                    <div class="atributo-input-container">
+                        <p>Presentacion 3</p>
+                        <div class="atributo-actions">
+                            <div class="product-action-edit"></div>
+                            <div class="product-action-delete"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="atributos-selection-main-content" id="unidadmedida-att">
+                    <div class="atributo-input-container">
+                        <p>Unidad de Medida 1</p>
+                        <div class="atributo-actions">
+                            <div class="product-action-edit"></div>
+                            <div class="product-action-delete"></div>
+                        </div>
+                    </div>
+                    <div class="atributo-input-container">
+                        <p>Unidad de Medida 2</p>
+                        <div class="atributo-actions">
+                            <div class="product-action-edit"></div>
+                            <div class="product-action-delete"></div>
+                        </div>
+                    </div>
+                    <div class="atributo-input-container">
+                        <p>Unidad de Medida 3</p>
+                        <div class="atributo-actions">
+                            <div class="product-action-edit"></div>
+                            <div class="product-action-delete"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="atributos-selection-main-content" id="categoria-att">
+                    <div class="atributo-input-container">
+                        <p>Categoria 1</p>
+                        <div class="atributo-actions">
+                            <div class="product-action-edit"></div>
+                            <div class="product-action-delete"></div>
+                        </div>
+                    </div>
+                    <div class="atributo-input-container">
+                        <p>Categoria 2</p>
+                        <div class="atributo-actions">
+                            <div class="product-action-edit"></div>
+                            <div class="product-action-delete"></div>
+                        </div>
+                    </div>
+                    <div class="atributo-input-container">
+                        <p>Categoria 3</p>
+                        <div class="atributo-actions">
+                            <div class="product-action-edit"></div>
+                            <div class="product-action-delete"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <br>
+        <h3>Ingresar datos</h3>
+        <form action="" class="form-att">
+            <div class="product-input-container">
+                <label for="nuevaUnidad">Nueva Unidad de Medida</label>
+                <input type="text" placeholder="Ingrese el dato correspondiente" name="nuevaUnidad" id="nuevaUnidad">
+                <button type="submit" id="button-att2">Ingresar</button>
+            </div>
+            <div class="product-input-container">
+                <label for="nuevoAtributo">Crear nuevo atributo</label>
+                <input type="text" placeholder="Ingrese el precio en dólares" name="nuevoAtributo" id="nuevoAtributo">
+                <button type="submit" id="button-att">Crear</button>
+            </div>
+        </form>
+    </main>
 </body>
+<script>
+
+const tab1 = document.getElementById('presentacion-tab');
+const tab2 = document.getElementById('unidadmedida-tab');
+const tab3 = document.getElementById('categoria-tab');
+
+const att1 = document.getElementById('presentacion-att')
+const att2 = document.getElementById('unidadmedida-att')
+const att3 = document.getElementById('categoria-att')
+
+tab1.addEventListener('click', () => {
+    tab1.classList.add('selected-tab')
+    tab2.classList.remove('selected-tab')
+    tab3.classList.remove('selected-tab')
+    att1.classList.add('showContent')
+    att2.classList.remove('showContent')
+    att3.classList.remove('showContent')
+});
+tab2.addEventListener('click', () => {
+    tab1.classList.remove('selected-tab')
+    tab2.classList.add('selected-tab')
+    tab3.classList.remove('selected-tab')
+    att1.classList.remove('showContent')
+    att2.classList.add('showContent')
+    att3.classList.remove('showContent')
+});
+tab3.addEventListener('click', () => {
+    tab1.classList.remove('selected-tab')
+    tab2.classList.remove('selected-tab')
+    tab3.classList.add('selected-tab')
+    att1.classList.remove('showContent')
+    att2.classList.remove('showContent')
+    att3.classList.add('showContent')
+});
+
+</script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </html>
