KAN-12: Modulo registro de usuarios

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -10,8 +10,8 @@
 
     <!-- Header con título dinámico -->
     <header class="ml-2">
-      <h3>Fabio Cerros</h3>
-      <h3>Administrador</h3>
+      <h3>Usuario</h3>
+      <h3>Rol</h3>
       <hr>
     </header>
     <header>
@@ -55,7 +55,7 @@
       <a th:href="@{/registrousuario}" class="nav-link">
         <i class="bi bi-pencil-square"></i> Registro de usuarios
       </a>
-      <a th:href="@{/login}" class="nav-link">
+      <a th:href="@{/logout}" class="nav-link">
         <i class="bi bi-box-arrow-left"></i> Cerrar sesión
       </a>
     </nav>
