--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,13 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet"  href="/css/styles.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <title>Iniciar Sesión</title>
 </head>
 <body>
-  <main class="login-main">
+<main class="login-main">
     <div class="login-main-container">
         <div class="login-title-container">
             <h1>SISTEMA AKAROA</h1>
@@ -16,19 +17,30 @@
         </div>
         <div class="login-form-container">
             <h2>Inicio de sesión</h2>
-            <form action="">
+            <form action="/login" th:action="@{/login}" method="post">
                 <div class="login-form-input-container">
-                    <input type="email" name="email" id="email-input" placeholder="Usuario">
-                    <input type="password" name="password" id="password-input" placeholder="Contraseña">
+                    <div th:if="${error}" class="alert alert-danger">
+                        <p th:text="${error}"></p>
+                    </div>
+                    <div th:if="${logout}" class="alert alert-success">
+                        <p th:text="${logout}"></p>
+                    </div>
+                    <!--                    <input type="email" name="email" id="email-input" placeholder="Usuario">-->
+                    <input type="text" name="username" id="email-input" placeholder="Correo electrónico" required
+                    pattern="^[\\w.-]+@akaroa\.com$"
+                    title="Introduce un email valido, por ejemplo: usuario@akaroa.com">
+                    <input type="password" name="password" id="password-input" placeholder="Contraseña" required>
                 </div>
                 <div class="login-form-button-container">
                     <a href="/productos">Recuperar contraseña (IR AL HOME)</a>
-                    <button type="submit" id="submit-button">Ingresar</button>
+                    <button th:action="@{/login}" type="submit" id="submit-button">Ingresar</button>
                 </div>
             </form>
         </div>
     </div>
-  </main>
+</main>
 </body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </html>
